kubernetes/apps/base/tools/homepage/ingress.yaml
# Homepage Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: tools
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - home.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: home.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
